...
          padding: const EdgeInsets.all(8.0),
          child: TextField(
            controller: textController,
            focusNode: focusNode,
            autofocus: true,
            decoration: const InputDecoration(
              labelText: 'Enter a string!',
            ),
            onSubmitted: (_) => submitString(),
          ),
        ),
        ElevatedButton(
          onPressed: submitString,
          child: const Text('Submit'),
        ),
      ],
    );
  }
}

...
