...
      final response = await widget.dio.patch(
        '/waydowntown/participations/${participation.id}',
        data: {
          "data": {
            "type": "participations",
            "id": participation.id,
            "attributes": {"ready": !isReady}
          }
        },
      );

      if (response.statusCode == 200) {
        setState(() {
...
